# kinect2_tracker

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup_nite.bash
include/: kinect2_tracker.hpp  user_IDs.h  visualization.hpp
launch/: tracker.launch
msg/: bounding_box.msg  user_IDs.msg  user_points.msg
src/: kinect2_tracker_node.cpp
